--- a/style.css
+++ b/style.css
@@ -44,7 +44,13 @@
       color: white;
       margin-top: 5px;
       margin-bottom: 5px;
+      display: block;
       
   }
+
+  #answerDisplay {
+      text-align: center;
+      font-size: 20px;
+      }
 
   
