--- a/style.css
+++ b/style.css
@@ -54,8 +54,22 @@
       }
 
 #gameOverDiv {
+    /* text-align: center; */
     display: none;
     font-size: 100px;
+    margin: 5px auto;
+    text-align: center;
 }
 
+.initialInput {
+    display: block;
+    text-align:center;
+    margin: 5px auto;
+    font-size: 20px;
+}
+
+.saveButton {
+    text-align: center;
+    font-size: 20px;
+}
   
