--- a/style.css
+++ b/style.css
@@ -56,12 +56,23 @@
 #gameOverDiv {
     /* text-align: center; */
     display: none;
-    font-size: 100px;
-    margin: 5px auto;
+    margin: 0 auto;
     text-align: center;
 }
 
-.initialInput {
+#scoreHere{
+    font-size:80px;
+}
+
+#initials {
+    font-size: 20px;
+}
+
+/* #inputInitials {
+    visibility: hidden;
+} */
+
+/* .initialInput {
     display: block;
     text-align:center;
     margin: 5px auto;
@@ -71,5 +82,15 @@
 .saveButton {
     text-align: center;
     font-size: 20px;
+} */
+
+/* #saveScoresDiv {
+    display:none;
+    text-align:center;
+} */
+
+#highScoreDiv {
+    display: none;
+
 }
   
