--- a/style.css
+++ b/style.css
@@ -27,12 +27,12 @@
     color: white;
 }
 
-.modal {
-    display: none;  
+#modalDiv {
+    clear: both;  
   }
     
   .modalContent {
-    position: relative;
+    /* position: relative; */
     background-color: #fefefe;
     margin: 0 auto;
     width: 400px;
@@ -46,13 +46,14 @@
       margin-top: 5px;
       margin-bottom: 5px;
       display: block;
-      clear: both;
+      
       
   }
 
   #answerDisplay {
       text-align: center;
       font-size: 20px;
+      clear: both;
       }
 
 #gameOverDiv {
@@ -81,5 +82,6 @@
     margin: 0 auto;
     visibility: hidden;
     text-align: center;
+    clear: both;
 }
   
